# MicrogridPlanner

./: .gitignore  AUTHORS  LICENSE  README.md  docker-compose.yaml.template
backend/: Dockerfile.template  config.ini.template  pyproject.toml  requirements.txt
backend/api/: app.py  extensions.py
backend/api/blueprints/resilience/: compute.py  disturbances.py  repairs.py  results.py
backend/data/mysql/: data-authentication-dev-test.sql  data-authentication.sql  data-microgrid-dev-test.sql  data-microgrid-guest.sql  data-microgrid.sql  migration-microgrid-v2.1-to-v3.0.sql  schema-authentication.sql  schema-microgrid.sql
backend/run/: compute.py  helpers.py
backend/run/resilience/: compute.yml.template
backend/run/sizing/deprecated/: compute.py
backend/src/components/electric_generators/: photovoltaic_panel.py
backend/src/data/mysql/: components.py  model_helpers.py  mysql_authentication.py  resilience.py  users.py
backend/src/grid/: disturbance.py  grid.py  grid_state.py
backend/src/models/: __init__.py  core_simulation.py
backend/src/models/resilience/: model.py
backend/src/models/sizing/: model.py
backend/src/reports/: metrics.py
backend/tests/: test_sizing.py
frontend/: Dockerfile.template  config.ini.template  pyproject.toml  requirements.txt
frontend/webapp/: app.py  extensions.py
frontend/webapp/blueprints/: authentication.py  resilience.py  toplevel.py
frontend/webapp/static/authentication-codeshack/: consent-cui.css  script.js  style.css
frontend/webapp/static/css/: cui.css  (+4 more)
frontend/webapp/templates/: index.html  layout.html
(+52 files in other folders)
